2015-04-16  Hani Benhabiles <hani.benhabiles@greenbone.net>

	Backport r22122 and r22128.

	* src/gsad.c (start_http_daemon, start_https_daemon): Adjust
	libmicrohttpd call to listen on IPv4 or IPv6 depending on address type.
	(gsad_address_set_port, gsad_address_init): New functions. Set address
	family to AF_INET6 in ANY case.
	(main): Refactor code to use gsad_address_set_port() and
	gsad_address_init() adequately.

2015-04-14  Timo Pollmeier <timo.pollmeier@greenbone.net>

	Backport r22077.

	* src/html/classic/omp.xsl (report-hosts-link): Prepend equals sign to
	host search phrase to make it exact.

2015-04-02  Matthew Mundell <matthew.mundell@greenbone.net>

	Backport r22055.

	* src/gsad_omp.c (get_config_nvt): Get notes and overrides, for count
	links.

2015-04-02  Matthew Mundell <matthew.mundell@greenbone.net>

	Backport r22053.

	* src/gsad_omp.c (simple_ompf): New function.
	(get_info): Get notes and overrides when getting a single NVT, for the
	count links.

	* src/html/classic/omp.xsl (nvt [details]): Adjust path position of
	notes and overrides, now that the NVT comes from GET_INFO.

2015-04-02  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/classic/omp.xsl: Missing file from last commit.

2015-04-02  Matthew Mundell <matthew.mundell@greenbone.net>

	Backport r22039.

	* src/html/classic/omp.xsl (gsa:envelope-filter): Only add the space
	when it is needed.

2015-04-01  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Post-release version bump.

	* CMakeLists.txt, src/html/classic/help.xsl: 6.0.2

2015-04-01  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Preparing the gsa 6.0.1 release.

	* CHANGES: Updated.

2015-04-01  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/classic/omp.xsl: Use envelope-filter to get the filter param
	combined with the extra_filter param, in all places that were getting
	just the filter param.
	(gsa:envelope-filter): New function.
